--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "be-snapwork",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon server"
+    "start": "node app.js"
   },
   "author": "DongVanCong",
   "license": "ISC",
