--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.0",
     "mysql2": "^3.6.5",
     "nodemon": "^3.1.10",
     "xlsx": "^0.18.5"
